--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Start of Survicate (www.survicate.com) code -->
+    <script type='text/javascript'>
+      (function(w) {
+        var s = document.createElement('script');
+        s.src = 'https://survey.survicate.com/workspaces/ad4fba490b32e3df2f82ded9f1136a00/web_surveys.js';
+        s.async = true;
+        var e = document.getElementsByTagName('script')[0];
+        e.parentNode.insertBefore(s, e);
+      })(window);
+    </script>
+    <!-- End of Survicate code -->
   </body>
 </html>
